--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
 
 <body>
     <h1>Кара создеры</h1>
-    <a href="karasoz/1.html">Бірінші қара созі</a>
-    <a href="karasoz/2.html">Екінші қара созі</a>
-    <a href="karasoz/3.html">Үшінші қара созі</a>
-    <a href="karasoz/4.html">Төртінші қара созі</a>
-    <a href="karasoz/5.html">Бесінші қара созі</a>
-    <a href="karasoz/6.html">Алтыншы қара созі</a>
+    <a href="1.html">Бірінші қара созі</a>
+    <a href="2.html">Екінші қара созі</a>
+    <a href="3.html">Үшінші қара созі</a>
+    <a href="4.html">Төртінші қара созі</a>
+    <a href="5.html">Бесінші қара созі</a>
+    <a href="6.html">Алтыншы қара созі</a>
 </body>
 
 </html>
