--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
     <a href="4.html">Төртінші қара созі</a>
     <a href="5.html">Бесінші қара созі</a>
     <a href="6.html">Алтыншы қара созі</a>
+    <a href="biofrafia.html">Биография</a>
 </body>
 
 </html>
